--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <header class="header">
-        <div class="header_container lato">
+        <div class="container">
             <div class="logo">
                 <img src="./assets/images/Logo.png" alt="Logo">
             </div>
@@ -29,7 +29,7 @@
 
             <div class="auth">
                 <a href="#">Sign In</a>
-                <button class="lato">Start Trial</button>
+                <button class="btn">Start Trial</button>
             </div>
 
         </div>
@@ -41,12 +41,12 @@
     
     <section id="hero" class="hero">
 
-        <div class="hero_container">
+        <div class="container">
             <div class="hero_items">
                 <h1 class="title georgia">
-                    Be aware, Manage well.
+                    Be aware, <br> Manage well.
                 </h1>
-                <p class="text lato">
+                <p class="text">
                     Everyone experiences stress in different ways.
                     Let Alivio guide you, in a personalized journal experience, to overcome your stress.
                 </p>
@@ -59,7 +59,7 @@
     </section>
 
     <section id="features" class="features">
-        <div class="features_container">
+        <div class="container">
             <div class="features_text_container">
                 <div class="features_title">
                     <p class="subtitle lato">How it works</p>
@@ -69,7 +69,7 @@
                     </h2>
                 </div>
                 <div class="features_text">
-                    <p class="text lato">
+                    <p class="text">
                         Alivio offers as many journals it takes, tackling different areas such as anxiety,
                         overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware
                         of your emotions, and guide you in how to manage stress.
@@ -79,20 +79,20 @@
 
             <div class="cards">
                 <div class="card">
-                    <h2>01 <span>Personalize</span></h2>
-                    <p class="text lato">Answer a quick survey about how you express yourself, what causes you stress,
+                    <h2 class="georgia">01 <span>Personalize</span></h2>
+                    <p class="text">Answer a quick survey about how you express yourself, what causes you stress,
                         and what areas you would like to work on. This way, we can fully personalize your journal!</p>
                     <img src="./assets/images/Rectangle 30.png" alt="Personalize image">
                 </div>
                 <div class="card">
-                    <h2>02 <span>Write & Understand</span></h2>
-                    <p class="text lato">Write, draw, reflect, understand. Alivio will guide you through the prompts and
+                    <h2 class="georgia">02 <span>Write & Understand</span></h2>
+                    <p class="text">Write, draw, reflect, understand. Alivio will guide you through the prompts and
                         will help you manage your stress!</p>
                     <img src="./assets/images/Rectangle 40.png" alt="Write & Understand image">
                 </div>
                 <div class="card">
-                    <h2>03 <span>Alivio!</span></h2>
-                    <p class="text lato">Now you are aware, and have a way to manage and overcome your own stress. What
+                    <h2 class="georgia">03 <span>Alivio!</span></h2>
+                    <p class="text">Now you are aware, and have a way to manage and overcome your own stress. What
                         are you waiting for? Try Alivio today!</p>
                     <img src="./assets/images/Group 29.png" alt="Alivio image">
                 </div>
@@ -104,7 +104,7 @@
         <div class="container">
             <div class="story-left">
                 <h2 class="story_title georgia">Let's hear about Kayla's success story</h2>
-                <p class="story_left_p lato">
+                <p class="story_left_p">
                     See how well Alivio works in a real customer’s life.
                 </p>
     
@@ -121,22 +121,22 @@
     </section>
 
     <section id="product" class="product">
-        <div class="product_container">
+        <div class="container">
             <div class="product_left">
                 <img src="./assets/images/Image.png" alt="user image">
 
                 <div class="product_card">
-                    <p class="product_card_head lato">Customized For</p>
+                    <p class="product_card_head">Customized For</p>
                     <hr>
                     <img src="./assets/images/card_Image.png" alt="user image">
-                    <p class=" product_card_text lato">Mikaya</p>
+                    <p class=" product_card_text">Mikaya</p>
                     <p class="product_card_title georgia">Your custom contents</p>
                     <ul>
                         <li>
-                            <p class="product_card_text lato">Understand your streess</p>
+                            <p class="product_card_text">Understand your streess</p>
                         </li>
                         <li>
-                            <p class="product_card_text lato">Anger Management</p>
+                            <p class="product_card_text">Anger Management</p>
                         </li>
                     </ul>
 
@@ -144,7 +144,7 @@
             </div>
 
             <div class="product_right">
-                <p class="subtitle lato">
+                <p class="subtitle">
                     Our product
                 </p>
 
@@ -153,7 +153,7 @@
                     We make your diary
                 </h2>
 
-                <p class="text lato">
+                <p class="text">
                     Everyone experiences it, and in different ways.
                     Let Alivio guide you, in a personalized journal experience, to overcome your stress.
                 </p>
@@ -164,7 +164,7 @@
 
     <footer class="footer">
 
-        <nav class="nav lato">
+        <nav class="nav">
             <a class="avio" href="#">Alivio</a>
             <a href="#">Why Alivio</a>
             <a href="#">Solutions</a>
