--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </button>
             </div>
     
-            <div class="story-right">
+            <div class="story_right">
                 <img src="./assets/images/Video.png" alt="video">
             </div>
         </div>
@@ -164,13 +164,15 @@
 
     <footer class="footer">
 
-        <nav class="nav">
-            <a class="avio" href="#">Alivio</a>
-            <a href="#">Why Alivio</a>
-            <a href="#">Solutions</a>
-            <a href="#">Community</a>
-            <a href="#">Pricing</a>
-        </nav>
+        <div class="container">
+            <nav class="nav">
+                <a class="avio" href="#">Alivio</a>
+                <a href="#">Why Alivio</a>
+                <a href="#">Solutions</a>
+                <a href="#">Community</a>
+                <a href="#">Pricing</a>
+            </nav>
+        </div>
 
     </footer>
 
